<resources>
    <string name="app_name">MovieDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome.</string>
    <string name="home_title">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="_7_0_imdb">7.0 IMDb</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="related_movies">Related Movies</string>
    <string name="favorite_list">Favorite List</string>
</resources>