<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyanBlue"
    tools:context=".ui.view.fragment.detail.DetailsActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/posterImg"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:scaleType="centerCrop"
                android:src="@drawable/poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/backImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="480dp"
                android:background="@drawable/shadow_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="60dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/posterImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/movieName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:maxLines="2"
                        android:text="Talk to Me (2023)"
                        android:textColor="@color/white"
                        android:textSize="27sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:drawablePadding="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="1h 35m"
                        android:textColor="@color/ashGrey"
                        android:textSize="12sp"
                        app:drawableLeftCompat="@drawable/ic_time" />

                    <TextView
                        android:id="@+id/ratting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:drawablePadding="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/_7_0_imdb"
                        android:textColor="@color/ashGrey"
                        android:textSize="12sp"
                        app:drawableLeftCompat="@drawable/ic_star_rate" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="2dp"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/release_date"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/ashGrey" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/genre"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/ashGrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/movieReleaseDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:maxLines="2"
                        android:text="sep 7, 2023"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textColor="@color/ashGrey" />

                    <TextView
                        android:id="@+id/genreOfMovie"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:maxLines="2"
                        android:text="Action"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textColor="@color/ashGrey" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/descLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/overview"
                    android:textColor="@color/ashGrey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/movieDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_regular"
                    android:maxLines="7"
                    android:text="Recent college grad Jaime Reyes returns home full of aspirations for his future, only to find that home is not quite as he left it. As he searches to find his purpose in the world, fate intervenes when Jaime unexpectedly finds himself in possession of an ancient relic of alien biotechnology: the Scarab."
                    android:textColor="@color/ashGrey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Status"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/ashGrey" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Original Language"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/ashGrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/releaseStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:maxLines="2"
                        android:text="Released"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textColor="@color/ashGrey" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:maxLines="2"
                        android:text="English"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textColor="@color/ashGrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Budget"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/ashGrey" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Revenue"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/ashGrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/budget"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:maxLines="2"
                        android:text="$104,000,000.00"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textColor="@color/ashGrey" />

                    <TextView
                        android:id="@+id/revenue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:maxLines="2"
                        android:text="$104,000,000.00"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textColor="@color/ashGrey" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/relatedMovieLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_vertical"
                    android:text="@string/related_movies"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/relatedRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/noDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Result Not Found"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="Whoops this information is not available for a moment"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goBack"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="Go Back"
            android:textAllCaps="false"
            android:textColor="@color/cyanBlue" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>